--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdown-to-jsx": "^7.4.7",
     "next": "14.2.3",
     "nodemailer": "^6.9.14",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
