--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.5",
     "framer-motion": "^11.2.12",
     "markdown-to-jsx": "^7.4.7",
     "next": "14.2.3",
+    "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.14",
     "prismjs": "^1.29.0",
     "react": "^18",
