--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   },
   "dependencies": {
     "@next/font": "^14.2.5",
+    "@tiptap/core": "^2.5.8",
+    "@tiptap/extension-link": "^2.5.8",
+    "@tiptap/pm": "^2.5.8",
+    "@tiptap/react": "^2.5.8",
+    "@tiptap/starter-kit": "^2.5.8",
     "framer-motion": "^11.2.12",
+    "html-react-parser": "^5.1.12",
+    "htmlparser2": "^9.1.0",
+    "jsdom": "^24.1.1",
     "markdown-to-jsx": "^7.4.7",
     "next": "14.2.3",
     "next-mdx-remote": "^5.0.0",
@@ -23,6 +31,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/prismjs": "^1.26.4",
