:sparkles: Upt do next 15

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@next/font": "^14.2.5",
     "framer-motion": "^11.2.12",
     "markdown-to-jsx": "^7.4.7",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.14",
     "prismjs": "^1.29.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0-rc-ed15d500-20241110",
+    "react-dom": "^19.0.0-rc-ed15d500-20241110",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
