--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.5",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "12.0.0-alpha.1",
     "markdown-to-jsx": "^7.4.7",
     "next": "^15.0.3",
     "next-mdx-remote": "^5.0.0",
