--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "overrides": {
     "react-is": "^19.0.0-rc-ed15d500-20241110",
     "react": "^19.0.0-rc-ed15d500-20241110",
-    "react-dom": "^19.0.0-rc-ed15d500-20241110"
+    "react-dom": "^19.0.0-rc-ed15d500-20241110",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3"
   },
   "dependencies": {
     "@next/font": "^14.2.5",
     "framer-motion": "12.0.0-alpha.1",
     "markdown-to-jsx": "^7.4.7",
-    "next": "^15.1.6",
+    "next": "16.1.6",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.14",
     "prismjs": "^1.29.0",
-    "react": "^19.0.0-rc-ed15d500-20241110",
-    "react-dom": "^19.0.0-rc-ed15d500-20241110",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
@@ -31,8 +33,8 @@
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/prismjs": "^1.26.4",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
     "postcss": "^8",
     "prettier": "^3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
